tests/NormalTests/paczka1/fuzzy1/23861904.err
Error in line 3: zEO8tz A896 10,4
Error in line 4: zEO8tz A741 5,1
Error in line 9: zEO8tz A881 11:,7
Error in line 8: zEO8tz A881 466,2
Error in line 13: Mxu8 A896 12,3
Error in line 17: Mxu8 A881 47,7
Error in line 19: Mxu8 A896 6,21
Error in line 10: A741 A896 20,8
Error in line 2: 9Pj A741 82,8
Error in line 23: 9Pj A881 69,0
Error in line 18: Mxu8 A896 47,1
